Before looking for the vectors alpha

--- a/Chapter3.tex
+++ b/Chapter3.tex
@@ -590,7 +590,7 @@ The intuition behind cross feature fusion $X_F$ is that the rich information fro
 \item \textbf{Cross Feature Early Fusion} ($X_FEF$): consists on the cross feature fusion ($X_F$) of two inputs, a similarity matrix, and the output of an early fusion. For example the operation $X_F(\sstd, E(\mlex, \msyn))$ implies the $X_F$ of the similarity matrix $\sstd$ with the early fusion of matrices $\mlex$ and $\msyn$.
 
 % %
-\item \textbf{Cross Feature Similarity Fusion} ($X_FX_SF$): entails the cross feature fusion ($X_F$) of two elements, the output of a cross similarity fusion ($X_S$), and a term-feature matrix. For example, the operation $X_F(X_S(\sstd, \ssyn), \mstd)$ is the cross feature fusion ($X_F$) of a cross similarity fusion ($X_S$), the late having similarity matrices $\sstd$ and $\ssyn$ as inputs, and a standard features matrix $\mstd$.
+\item \textbf{Cross Feature Cross Similarity Fusion} ($X_FX_SF$): entails the cross feature fusion ($X_F$) of two elements, the output of a cross similarity fusion ($X_S$), and a term-feature matrix. For example, the operation $X_F(X_S(\sstd, \ssyn), \mstd)$ is the cross feature fusion ($X_F$) of a cross similarity fusion ($X_S$), the late having similarity matrices $\sstd$ and $\ssyn$ as inputs, and a standard features matrix $\mstd$.
 
 %
 \item \textbf{Early Cross Feature Fusion} ($EX_FF$):  this operation consists on the early fusion of a feature matrix with the output of a cross similarity fusion. As an example, the operation $E(\mstd,X_F(\slex, \mstd))$ computes the early fusion of matrix $\mstd$ with the result of a $X_F$ with $\slex$ and $\mstd$ as operands. 
