--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -1110,7 +1110,16 @@ publisher = "Wiley-Blackwell",
 } 
 
 
-
+@inproceedings{Song16,
+  author    = {Linfeng Song and
+               Zhiguo Wang and
+               Haitao Mi and
+               Daniel Gildea},
+  title     = {Sense Embedding Learning for Word Sense Induction},
+  booktitle = {*SEM@ACL},
+  publisher = {The *SEM 2016 Organizing Committee},
+  year      = {2016}
+}
 
 @article{Shi2000,
  author = {Shi, Jianbo and Malik, Jitendra},
@@ -1131,6 +1140,14 @@ publisher = "Wiley-Blackwell",
  address = {Washington, DC, USA},
 } 
 
+@inproceedings{song2008parallel,
+  title={Parallel spectral clustering},
+  author={Song, Yangqiu and Chen, Wen-Yen and Bai, Hongjie and Lin, Chih-Jen and Chang, Edward Y},
+  booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+  pages={374--389},
+  year={2008},
+  organization={Springer}
+}
 
 
 @InProceedings{GoyalH14,
