--- a/Chapter2.tex
+++ b/Chapter2.tex
@@ -412,7 +412,7 @@ In the following chapter we describe our two first propositions which address th
 %\section{Named Entity Recognition}
 
 %\section{Sequential Classification: Structured Perceptron}
-%\section{Clustering: Spectral Clustering}
+%\section{Clustering: lustering}
 
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
